# claude-skills-collection-2026

./: BUILD.md  LICENSE  README.md  package.json  requirements.txt
skills/aws-architect/scripts/: generate_architecture.py
skills/aws-architect/templates/: serverless.yaml  vpc.json
skills/code-reviewer/: README.md  SKILL.md
skills/code-reviewer/rules/: cpp.yaml  js.yaml  python.yaml
skills/code-reviewer/scripts/: format_output.js  run_analyzer.py
skills/cpp-analyzer/: README.md  SKILL.md
skills/prompt-factory/scripts/: generate_prompt.py
skills/prompt-factory/templates/: product-manager.txt  senior-dev.txt
skills/weekly-report/scripts/: generate_report.py
src/cpp/bindings/node/: addon.cpp
src/cpp/bindings/pybind/: claude_skills.cpp
src/cpp/engine/: CMakeLists.txt  Makefile.mk
src/cpp/engine/include/: file_processor.h  pattern_scanner.h  skill_engine.h
src/cpp/engine/src/: file_processor.cpp  pattern_scanner.cpp  skill_engine.cpp
src/cpp/tools/: code_analyzer.cpp  json_validator.cpp  yaml_parser.cpp
src/js/: index.js  mcp-server.js
src/python/skill_wrappers/: __init__.py  aws_architect.py  code-reviewer.py  prompt_factory.py
src/python/utils/: mcp_client.py  skill_loader.py
